--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
         <configuration>
           <testFailureIgnore>true</testFailureIgnore>
           <argLine>
-            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/1.9.2/aspectjweaver-1.9.2.jar"
           </argLine>
           <systemProperties>
             <property>
@@ -78,7 +78,7 @@
           <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
-            <version>${aspectj.version}</version>
+            <version>1.9.2</version>
           </dependency>
         </dependencies>
       </plugin>
