--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
       <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+  <groupId>io.qameta.allure</groupId>
+  <artifactId>allure-junit5</artifactId>
+  <version>2.18.0</version>
+</dependency>
   </dependencies>
   <build>
     <plugins>
@@ -71,7 +76,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.2</version>
         <configuration>
-          <testFailureIgnore>true</testFailureIgnore>
+          <testFailureIgnore>false</testFailureIgnore>
           <argLine>
             -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
           </argLine>
