--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
     <dependency>
       <groupId>io.qameta.allure</groupId>
       <artifactId>allure-junit5</artifactId>
-      <version>${allure.version}</version>
+      <version>2.18.0</version>
     </dependency>
     <dependency>
       <groupId>io.qameta.allure</groupId>
